@@ -1,3 +1,7 @@
+2009-03-27  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #10025: ImageMagick generates larger than necessary files
+
 2009-03-27  Michael Stucki  <michael@typo3.org>
 
 	* AdminPanel: Indicate number of USER_INT objects used on a page
